<resources>
        <string name="app_name">Github User App</string>
        <string name="name">Name</string>
        <string name="lorem_ipsum">Lorem Ipsum</string>
        <string name="year">2018</string>
        <string name="_75">75%</string>
        <string name="title_detail">Title detail</string>
        <string name="username">Username</string>
        <string name="usernamegithub">Username Github</string>
        <string name="company">Company</string>
        <string name="companyname">Company Name</string>
        <string name="repo">102</string>
        <string name="following">Following</string>
        <string name="followers">Followers</string>
        <string name="_12">12</string>
        <string name="_56995">56995</string>
        <string name="budget">Budget</string>
        <string name="_000000">$000000</string>
        <string name="_00000">$00000</string>
        <string name="location">Location</string>
        <string name="lorem_ipsum_dolor_sit_amet">Lorem Ipsum Dolor Sit amet</string>
        <string name="revenue">Revenue</string>

        <string-array name="data_name">
            <item>Jake Wharton</item>
            <item>Amit Shekhar</item>
            <item>Romain Guy</item>
            <item>Chris Banes</item>
            <item>David</item>
            <item>Ravi Tamada</item>
            <item>Deny Prasetyo</item>
            <item>Budi Oktaviyan</item>
            <item>Hendi Santika</item>
            <item>Sidiq Permana</item>

        </string-array>

        <string-array name="data_location">
            <item>Pittsburgh, PA, USA</item>
            <item>New Delhi, India</item>
            <item>California</item>
            <item>Sydney, Australia</item>
            <item>Trondheim, Norway</item>
            <item>India</item>
            <item>Kotagede, Yogyakarta, Indonesia</item>
            <item>Jakarta, Indonesia</item>
            <item>Bojongsoang - Bandung Jawa Barat</item>
            <item>Jakarta, Indonesia</item>

        </string-array>

        <array name="data_poster">

            <item>@drawable/user1</item>
            <item>@drawable/user2</item>
            <item>@drawable/user3</item>
            <item>@drawable/user4</item>
            <item>@drawable/user5</item>
            <item>@drawable/user6</item>
            <item>@drawable/user7</item>
            <item>@drawable/user8</item>
            <item>@drawable/user9</item>
            <item>@drawable/user10</item>

        </array>

        <string-array name="data_userCompany">
            <item>Google, Inc.</item>
            <item>MindOrksOpenSource</item>
            <item>Google</item>
            <item>Google working on @android</item>
            <item>Working Group Two</item>
            <item>AndroidHive | Droid5</item>
            <item>gojek-engineering</item>
            <item>KotlinID</item>
            <item>JVMDeveloperID @KotlinID @IDDevOps</item>
            <item>Nusantara Beta Studio</item>

        </string-array>

        <string-array name="data_following">
            <item>12</item>
            <item>2</item>
            <item>0</item>
            <item>1</item>
            <item>0</item>
            <item>3</item>
            <item>39</item>
            <item>23</item>
            <item>61</item>
            <item>10</item>

        </string-array>

        <string-array name="data_username">
            <item>JakeWharton</item>
            <item>amitshekhariitbhu</item>
            <item>romainguy</item>
            <item>chrisbanes</item>
            <item>tipsy</item>
            <item>ravi8x</item>
            <item>jasoet</item>
            <item>budioktaviyan</item>
            <item>hendisantika</item>
            <item>sidiqpermana</item>

        </string-array>

        <string-array name="data_repo">
            <item>102</item>
            <item>37</item>
            <item>9</item>
            <item>30</item>
            <item>56</item>
            <item>28</item>
            <item>44</item>
            <item>110</item>
            <item>1064</item>
            <item>65</item>


        </string-array>

        <string-array name="data_followers">
            <item>56995</item>
            <item>5153</item>
            <item>7972</item>
            <item>14725</item>
            <item>788</item>
            <item>18628</item>
            <item>277</item>
            <item>178</item>
            <item>428</item>
            <item>465</item>


        </string-array>

        <string-array name="data_year">
            <item>2020</item>
            <item>2019</item>
            <item>2020</item>
            <item>2020</item>
            <item>2019</item>
            <item>2019</item>
            <item>2019</item>
            <item>2020</item>
            <item>2020</item>
            <item>2020</item>


        </string-array>


    </resources>

