<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_marginTop="50dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/img_poster"
                android:layout_marginStart="26dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_marginTop="5dp"
                    android:paddingTop="2dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/name"
                    android:fontFamily="serif"
                    android:textColor="@color/colorGold"
                    android:textSize="15sp"  />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingTop="25dp"
                    android:text="@string/username"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txt_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/usernamegithub"
                    android:fontFamily="serif"
                    android:textColor="@color/colorGold"
                    android:textSize="15sp"  />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingTop="25dp"
                    android:text="@string/company"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txt_user_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/companyname"
                    android:fontFamily="serif"
                    android:textColor="@color/colorGold"
                    android:textSize="15sp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingTop="25dp"
                    android:text="Repository"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txt_repo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/repo"
                    android:fontFamily="serif"
                    android:textColor="@color/colorGold"
                    android:textSize="15sp"  />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="User Description"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:textColor="#fff"
                android:background="#000000"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorGold"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:text="@string/followers"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorGold"/>


            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_following"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_12"
                    android:fontFamily="serif"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_followers"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:text="@string/_56995"
                    android:fontFamily="serif"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>








            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/location"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="#000000"
                    android:textColor="#fff"/>

                <TextView
                    android:id="@+id/txt_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:text="@string/lorem_ipsum_dolor_sit_amet"
                    android:fontFamily="serif"/>
            </LinearLayout>
        </LinearLayout>


</ScrollView>